--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,75 @@
+body{
+    background: linear-gradient(to bottom, #3E95EC, #A5F6F8);
+}
 
+.pokemon-form{;
+    text-align: center;
+    
+}
+#pokemon-select{
+    background-color: #929AFC;
+    width: 150px;
+    height: 30px;
+    border-color: black;
+}
+
+#get-pokemon{
+    background-color: #0C19F1;
+    width: 150px;
+    height: 30px;
+    border-radius: 5px;
+}
+#get-pokemon:hover{
+    background-color: gray;
+}
+
+.pokemon-container{
+    padding:1px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;   
+}
+.pokemon-name {
+    color: #F7F8FB;
+    text-align: center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 70px;
+
+}
+
+.pokemon-img {
+    margin:10px;
+    width: 200px; 
+    height: auto;
+    margin: auto;
+}
+
+.pokemon-properties{
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    white-space: pre-line;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.container h1{
+    color: #FBFB09;
+    font-weight: bold;
+    font-size: 50px;
+    display: flex;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.ball img {
+    margin-top: 5px;
+    margin-bottom:20px;
+    width: 80px; 
+    height: auto; 
+    margin-right: 10px; 
+    justify-content: flex-end;
+}
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
